#========================================================================================

project( dss_exam C CXX )

#========================================================================================

cmake_minimum_required( VERSION 3.17 )

#========================================================================================

set( CMAKE_CXX_STANDARD 14 )

#========================================================================================

include_directories ( include )
AUX_SOURCE_DIRECTORY( src SRC )

#========================================================================================

add_executable( dss main.cpp ${SRC} )

#========================================================================================